==> apache/mynewt-core/hw/mcu/nordic/nrf5340_net/src/hal_spi.c <==
#include <string.h>
#include <errno.h>
#include <assert.h>
#include <os/mynewt.h>
#include <mcu/cmsis_nvic.h>
#include <hal/hal_spi.h>
#include <mcu/nrf5340_net_hal.h>
#include <nrf.h>
#include <nrfx_common.h>
#define SPIM_TXD_MAXCNT_MAX 0xffff
#define NRF_SPI_IRQ_DISABLE_ALL 0xffffffff
#define HAL_SPI_SLAVE_STATE_IDLE        (0)
#define HAL_SPI_SLAVE_STATE_ACQ_SEM     (1)
#define HAL_SPI_SLAVE_STATE_READY       (2)

static int
hal_spi_config_master(struct nrf5340_net_hal_spi *spi,
                      struct hal_spi_settings *settings)
{
    int rc;
    uint32_t nrf_config;
    uint32_t frequency;
    NRF_GPIO_Type *port;
    uint32_t pin;

    memcpy(&spi->spi_cfg, settings, sizeof(*settings));

    /*
     * Configure SCK. NOTE: this is done here in the config API as the data
     * mode is not set at init time so we do it here when we configure the SPI.
     */
    pin = NRF_SPIM0_NS->PSEL.SCK & SPIM_PSEL_SCK_PIN_Msk;
    if (NRF_SPIM0_NS->PSEL.SCK & SPIM_PSEL_SCK_PORT_Msk) {
        port = NRF_P1_NS;
    } else {
        port = NRF_P0_NS;
    }

    if (settings->data_mode <= HAL_SPI_MODE1) {
        port->OUTCLR = (1UL << pin);
    } else {
        port->OUTSET = (1UL << pin);
    }
    port->PIN_CNF[pin] =
        (GPIO_PIN_CNF_DIR_Output << GPIO_PIN_CNF_DIR_Pos) |
        (GPIO_PIN_CNF_INPUT_Disconnect << GPIO_PIN_CNF_INPUT_Pos);

    /* Only 8-bit word sizes supported. */
    rc = 0;
    switch (settings->word_size) {
        case HAL_SPI_WORD_SIZE_8BIT:
            break;
        default:
            rc = EINVAL;
            break;
    }

    switch (settings->data_mode) {
        case HAL_SPI_MODE0:
            nrf_config = (SPIM_CONFIG_CPOL_ActiveHigh << SPIM_CONFIG_CPOL_Pos) |
                         (SPIM_CONFIG_CPHA_Leading << SPIM_CONFIG_CPHA_Pos);
            break;
        case HAL_SPI_MODE1:
            nrf_config = (SPIM_CONFIG_CPOL_ActiveHigh << SPIM_CONFIG_CPOL_Pos) |
                         (SPIM_CONFIG_CPHA_Trailing << SPIM_CONFIG_CPHA_Pos);
            break;
        case HAL_SPI_MODE2:
            nrf_config = (SPIM_CONFIG_CPOL_ActiveLow << SPIM_CONFIG_CPOL_Pos) |
                         (SPIM_CONFIG_CPHA_Leading << SPIM_CONFIG_CPHA_Pos);
            break;
        case HAL_SPI_MODE3:
            nrf_config = (SPIM_CONFIG_CPOL_ActiveLow << SPIM_CONFIG_CPOL_Pos) |
                         (SPIM_CONFIG_CPHA_Trailing << SPIM_CONFIG_CPHA_Pos);
            break;
        default:
            nrf_config = 0;
            rc = EINVAL;
            break;
    }

    /* NOTE: msb first is 0 so no check done */
    if (settings->data_order == HAL_SPI_LSB_FIRST) {
        nrf_config |= SPIM_CONFIG_ORDER_LsbFirst;
    }
    NRF_SPIM0_NS->CONFIG = nrf_config;

    switch (settings->baudrate) {
        case 125:
            frequency = SPIM_FREQUENCY_FREQUENCY_K125;
            break;
        case 250:
            frequency = SPIM_FREQUENCY_FREQUENCY_K250;
            break;
        case 500:
            frequency = SPIM_FREQUENCY_FREQUENCY_K500;
            break;
        case 1000:
            frequency = SPIM_FREQUENCY_FREQUENCY_M1;
            break;
        case 2000:
            frequency = SPIM_FREQUENCY_FREQUENCY_M2;
            break;
        case 4000:
            frequency = SPIM_FREQUENCY_FREQUENCY_M4;
            break;
        case 8000:
            frequency = SPIM_FREQUENCY_FREQUENCY_M8;
            break;
        default:
            frequency = 0;
            rc = EINVAL;
            break;
    }
    NRF_SPIM0_NS->FREQUENCY = frequency;

    return rc;
}

static int
hal_spi_config_slave(struct nrf5340_net_hal_spi *spi,
                     struct hal_spi_settings *settings)
{
    int rc;
    uint32_t nrf_config;

    rc = 0;
    switch (settings->data_mode) {
        case HAL_SPI_MODE0:
            nrf_config = (SPIS_CONFIG_CPOL_ActiveHigh << SPIS_CONFIG_CPOL_Pos) |
                         (SPIS_CONFIG_CPHA_Leading << SPIS_CONFIG_CPHA_Pos);
            break;
        case HAL_SPI_MODE1:
            nrf_config = (SPIS_CONFIG_CPOL_ActiveHigh << SPIS_CONFIG_CPOL_Pos) |
                         (SPIS_CONFIG_CPHA_Trailing << SPIS_CONFIG_CPHA_Pos);
            break;
        case HAL_SPI_MODE2:
            nrf_config = (SPIS_CONFIG_CPOL_ActiveLow << SPIS_CONFIG_CPOL_Pos) |
                         (SPIS_CONFIG_CPHA_Leading << SPIS_CONFIG_CPHA_Pos);
            break;
        case HAL_SPI_MODE3:
            nrf_config = (SPIS_CONFIG_CPOL_ActiveLow << SPIS_CONFIG_CPOL_Pos) |
                         (SPIS_CONFIG_CPHA_Trailing << SPIS_CONFIG_CPHA_Pos);
            break;
        default:
            nrf_config = 0;
            rc = EINVAL;
            break;
    }

    if (settings->data_order == HAL_SPI_LSB_FIRST) {
        nrf_config |= SPIS_CONFIG_ORDER_LsbFirst;
    }
    NRF_SPIS0_NS->CONFIG = nrf_config;

    /* Only 8-bit word sizes supported. */
    switch (settings->word_size) {
        case HAL_SPI_WORD_SIZE_8BIT:
            break;
        default:
            rc = EINVAL;
            break;
    }

    return rc;
}

static int
hal_spi_init_master(struct nrf5340_net_hal_spi *spi,
                    struct nrf5340_net_hal_spi_cfg *cfg)
{
    NRF_GPIO_Type *port;
    uint32_t pin;

    /*  Configure MOSI */
    port = HAL_GPIO_PORT(cfg->mosi_pin);
    pin = HAL_GPIO_INDEX(cfg->mosi_pin);
    port->OUTCLR = (1UL << pin);
    port->PIN_CNF[pin] =
        ((uint32_t)GPIO_PIN_CNF_DIR_Output << GPIO_PIN_CNF_DIR_Pos) |
        ((uint32_t)GPIO_PIN_CNF_INPUT_Disconnect << GPIO_PIN_CNF_INPUT_Pos);

    /* Configure MISO */
    port = HAL_GPIO_PORT(cfg->miso_pin);
    pin = HAL_GPIO_INDEX(cfg->miso_pin);
    port->PIN_CNF[pin] =
        ((uint32_t)GPIO_PIN_CNF_DIR_Input << GPIO_PIN_CNF_DIR_Pos) |
        ((uint32_t)GPIO_PIN_CNF_INPUT_Connect << GPIO_PIN_CNF_INPUT_Pos);

    NRF_SPIM0_NS->PSEL.SCK = cfg->sck_pin;
    NRF_SPIM0_NS->PSEL.MOSI = cfg->mosi_pin;
    NRF_SPIM0_NS->PSEL.MISO = cfg->miso_pin;

    NRF_SPIM0_NS->INTENCLR = NRF_SPI_IRQ_DISABLE_ALL;
    NVIC_SetVector(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn,
                   (uint32_t)nrf5340_net_spi0_irq_handler);
    NVIC_SetPriority(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn,
                     (1 << __NVIC_PRIO_BITS) - 1);
    NVIC_ClearPendingIRQ(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn);
    NVIC_EnableIRQ(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn);

    return 0;
}

static int
hal_spi_init_slave(struct nrf5340_net_hal_spi *spi,
                   struct nrf5340_net_hal_spi_cfg *cfg)
{
    NRF_GPIO_Type *port;
    uint32_t pin;

    /* NOTE: making this pin an input is correct! See datasheet */
    port = HAL_GPIO_PORT(cfg->miso_pin);
    pin = HAL_GPIO_INDEX(cfg->miso_pin);
    port->PIN_CNF[pin] =
        ((uint32_t)GPIO_PIN_CNF_DIR_Input << GPIO_PIN_CNF_DIR_Pos) |
        ((uint32_t)GPIO_PIN_CNF_INPUT_Connect << GPIO_PIN_CNF_INPUT_Pos);

    port = HAL_GPIO_PORT(cfg->mosi_pin);
    pin = HAL_GPIO_INDEX(cfg->mosi_pin);
    port->PIN_CNF[pin] =
        ((uint32_t)GPIO_PIN_CNF_DIR_Input << GPIO_PIN_CNF_DIR_Pos) |
        ((uint32_t)GPIO_PIN_CNF_INPUT_Connect << GPIO_PIN_CNF_INPUT_Pos);

    port = HAL_GPIO_PORT(cfg->ss_pin);
    pin = HAL_GPIO_INDEX(cfg->ss_pin);
    port->PIN_CNF[pin] =
        ((uint32_t)GPIO_PIN_CNF_DIR_Input << GPIO_PIN_CNF_DIR_Pos) |
        ((uint32_t)GPIO_PIN_CNF_PULL_Pullup  << GPIO_PIN_CNF_PULL_Pos) |
        ((uint32_t)GPIO_PIN_CNF_INPUT_Connect << GPIO_PIN_CNF_INPUT_Pos);

    port = HAL_GPIO_PORT(cfg->sck_pin);
    pin = HAL_GPIO_INDEX(cfg->sck_pin);
    port->PIN_CNF[pin] =
        ((uint32_t)GPIO_PIN_CNF_DIR_Input << GPIO_PIN_CNF_DIR_Pos) |
        ((uint32_t)GPIO_PIN_CNF_INPUT_Connect << GPIO_PIN_CNF_INPUT_Pos);

    NRF_SPIS0_NS->PSEL.SCK  = cfg->sck_pin;
    NRF_SPIS0_NS->PSEL.MOSI = cfg->mosi_pin;
    NRF_SPIS0_NS->PSEL.MISO = cfg->miso_pin;
    NRF_SPIS0_NS->PSEL.CSN  = cfg->ss_pin;

    /* Disable interrupt and clear any interrupt events */
    NRF_SPIS0_NS->INTENCLR = SPIS_INTENSET_ACQUIRED_Msk | SPIS_INTENSET_END_Msk;
    NRF_SPIS0_NS->EVENTS_END = 0;
    NRF_SPIS0_NS->EVENTS_ACQUIRED = 0;

    /* Enable END_ACQUIRE shortcut. */
    NRF_SPIS0_NS->SHORTS = SPIS_SHORTS_END_ACQUIRE_Msk;

    /* Set interrupt vector and enable IRQ */
    NVIC_SetVector(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn,
                   (uint32_t)nrf5340_net_spi0_irq_handler);
    NVIC_SetPriority(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn,
                     (1 << __NVIC_PRIO_BITS) - 1);
    NVIC_ClearPendingIRQ(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn);
    NVIC_EnableIRQ(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn);

    return 0;
}

int
hal_spi_config(int spi_num, struct hal_spi_settings *settings)
{
    struct nrf5340_net_hal_spi *spi = &nrf5340_net_hal_spi0;

    if (spi_num != 0) {
        return EINVAL;
    }

#if MYNEWT_VAL(SPI_0_MASTER)
    if (NRF_SPIM0_NS->ENABLE != 0) {
        return EINVAL;
    }

    return hal_spi_config_master(spi, settings);
#endif

#if MYNEWT_VAL(SPI_0_SLAVE)
    if (NRF_SPIS0_NS->ENABLE != 0) {
        return EINVAL;
    }

    return hal_spi_config_slave(spi, settings);
#endif
}

int
hal_spi_enable(int spi_num)
{
    struct nrf5340_net_hal_spi *spi = &nrf5340_net_hal_spi0;

    if (spi_num != 0 || spi->txrx_cb_func == NULL) {
        return EINVAL;
    }

#if MYNEWT_VAL(SPI_0_MASTER)
    NRF_SPIM0_NS->EVENTS_END = 0;
    NRF_SPIM0_NS->ENABLE = (SPIM_ENABLE_ENABLE_Enabled << SPIM_ENABLE_ENABLE_Pos);
#endif

#if MYNEWT_VAL(SPI_0_SLAVE)
    NRF_SPIS0_NS->EVENTS_END = 0;
    NRF_SPIS0_NS->EVENTS_ACQUIRED = 0;
    NRF_SPIS0_NS->INTENSET = SPIS_INTENSET_END_Msk | SPIS_INTENSET_ACQUIRED_Msk;
    NRF_SPIS0_NS->ENABLE = (SPIS_ENABLE_ENABLE_Enabled << SPIS_ENABLE_ENABLE_Pos);
#endif

    return 0;
}

int
hal_spi_disable(int spi_num)
{
    struct nrf5340_net_hal_spi *spi = &nrf5340_net_hal_spi0;

    if (spi_num != 0) {
        return -EINVAL;
    }

#if MYNEWT_VAL(SPI_0_MASTER)
    NRF_SPIM0_NS->INTENCLR = NRF_SPI_IRQ_DISABLE_ALL;

    if (spi->spi_xfr_flag) {
        hal_spi_master_stop_transfer();
        spi->spi_xfr_flag = 0;
    }
    NRF_SPIM0_NS->ENABLE = 0;
#endif

#if MYNEWT_VAL(SPI_0_SLAVE)
    NRF_SPIS0_NS->INTENCLR = NRF_SPI_IRQ_DISABLE_ALL;
    NRF_SPIS0_NS->EVENTS_END = 0;
    NRF_SPIS0_NS->EVENTS_ACQUIRED = 0;
    NRF_SPIS0_NS->ENABLE = 0;
    spi->slave_state = HAL_SPI_SLAVE_STATE_IDLE;
#endif

    spi->nhs_txbuf = NULL;
    spi->nhs_rxbuf = NULL;
    spi->nhs_buflen = 0;
    spi->nhs_bytes_txd = 0;

    return 0;
}

int
hal_spi_txrx_noblock(int spi_num, void *txbuf, void *rxbuf, int len)
{
    struct nrf5340_net_hal_spi *spi = &nrf5340_net_hal_spi0;

    if (spi_num != 0 || (spi->txrx_cb_func == NULL) || (len == 0) || !nrfx_is_in_ram(txbuf)) {
        return EINVAL;
    }

    if (rxbuf != NULL && !nrfx_is_in_ram(rxbuf)) {
        return EINVAL;
    }

#if MYNEWT_VAL(SPI_0_MASTER)
    /* Must have a txbuf for master! */
    if (txbuf == NULL) {
        return EINVAL;
    }

    /* Not allowed if transfer in progress */
    if (spi->spi_xfr_flag) {
        return EBUSY;
    }

    NRF_SPIM0_NS->INTENCLR = SPIM_INTENCLR_END_Msk;
    spi->spi_xfr_flag = 1;

    /* Set internal data structure information */
    spi->nhs_bytes_txd = 0;
    spi->nhs_buflen = len;
    spi->nhs_txbuf = txbuf;

    len = min(SPIM_TXD_MAXCNT_MAX, len);

    /* Set chip registers */
    NRF_SPIM0_NS->TXD.PTR = (uint32_t)txbuf;
    NRF_SPIM0_NS->TXD.MAXCNT = len;

    /* If no rxbuf, we need to set rxbuf and maxcnt to 1 */
    spi->nhs_rxbuf = rxbuf;
    if (rxbuf == NULL) {
        NRF_SPIM0_NS->RXD.PTR = (uint32_t)&spi->dummy_rx;
        NRF_SPIM0_NS->RXD.MAXCNT = 1;
    } else {
        NRF_SPIM0_NS->RXD.PTR = (uint32_t)rxbuf;
        NRF_SPIM0_NS->RXD.MAXCNT = len;
    }

    NRF_SPIM0_NS->EVENTS_END = 0;
    NRF_SPIM0_NS->EVENTS_STOPPED = 0;
    NRF_SPIM0_NS->TASKS_START = 1;
    NRF_SPIM0_NS->INTENSET = SPIM_INTENSET_END_Msk;
#endif

#if MYNEWT_VAL(SPI_0_SLAVE)
    /* Must have txbuf or rxbuf */
    if ((txbuf == NULL) && (rxbuf == NULL)) {
        return EINVAL;
    }

    /* XXX: what to do here? */
    if (len > 255) {
        return EINVAL;
    }

    /*
     * Ready the slave for a transfer. Do not allow this to be called
     * if the slave has already been readied or is requesting the
     * semaphore
     */
    if (spi->slave_state != HAL_SPI_SLAVE_STATE_IDLE) {
        return EBUSY;
    }

    spi->nhs_rxbuf = rxbuf;
    spi->nhs_txbuf = txbuf;
    spi->nhs_buflen = len;
    spi->slave_state = HAL_SPI_SLAVE_STATE_ACQ_SEM;
    NRF_SPIS0_NS->TASKS_ACQUIRE = 1;
#endif

    return 0;
}
