==> apache/mynewt-core/hw/mcu/ambiq/apollo3/src/hal_spi.c <==
#include <string.h>
#include <errno.h>
#include <assert.h>
#include <stdbool.h>
#include "os/mynewt.h"
#include "hal/hal_spi.h"
#include "mcu/hal_apollo3.h"
#include "mcu/cmsis_nvic.h"
#include "am_mcu_apollo.h"
#define SPI_MASTER_ANY_ENABLED ( \
    MYNEWT_VAL(SPI_0_MASTER) ||  \
    MYNEWT_VAL(SPI_1_MASTER) ||  \
    MYNEWT_VAL(SPI_2_MASTER) ||  \
    MYNEWT_VAL(SPI_3_MASTER) ||  \
    MYNEWT_VAL(SPI_4_MASTER) ||  \
    MYNEWT_VAL(SPI_5_MASTER))
#define SPI_SLAVE_ANY_ENABLED ( \
    MYNEWT_VAL(SPI_0_SLAVE))
#define AM_IOS_TX_BUFSIZE_MAX   1023

static int
hal_spi_config_master(int spi_num, const struct hal_spi_settings *settings)
{
    am_hal_iom_config_t sdk_config;
    struct apollo3_spi *spi;

    spi = apollo3_spi_resolve(spi_num);
    if (spi == NULL) {
        return SYS_EINVAL;
    }

    sdk_config.eInterfaceMode = AM_HAL_IOM_SPI_MODE;
    sdk_config.ui32ClockFreq = settings->baudrate;
    sdk_config.eSpiMode = (am_hal_iom_spi_mode_e)apollo3_spi_data_mode(settings->data_mode);
    am_hal_iom_configure(spi->spi_handle, &sdk_config);

    return 0;
}

static int
hal_spi_config_slave(int spi_num, const struct hal_spi_settings *settings)
{
    struct apollo3_spi *spi;

    spi = apollo3_spi_resolve(spi_num);
    if (spi == NULL) {
        return SYS_EINVAL;
    }

    am_hal_ios_configure(spi->spi_handle, &g_ios_spi_config);

    return 0;
}

static int
hal_spi_init_master(int spi_num, const struct apollo3_spi_cfg *cfg)
{
    struct apollo3_spi *spi;
    int spi_pin_func_sel, ss_pin_func_sel, i;
    am_hal_gpio_pincfg_t spi_sck_cfg, spi_miso_cfg, spi_mosi_cfg, spi_ss_cfg;

    spi = apollo3_spi_resolve(spi_num);
    if (spi == NULL) {
        return SYS_EINVAL;
    }
    memset(spi, 0, sizeof *spi);

    /* Initialize the IOM. */
    if (am_hal_iom_initialize(spi_num, &(spi->spi_handle)) != AM_HAL_STATUS_SUCCESS) {
        return SYS_EINVAL;
    }
    
    if (am_hal_iom_power_ctrl(spi->spi_handle, AM_HAL_SYSCTRL_WAKE, false) != AM_HAL_STATUS_SUCCESS) {
        return SYS_EINVAL;
    }

    /* Set the required configuration settings for the IOM. */
    if (am_hal_iom_configure(spi->spi_handle, &g_iom_spi_config) != AM_HAL_STATUS_SUCCESS) {
        return SYS_EINVAL;
    }

    /* Configure the IOM pins. */
    spi_pin_func_sel = hal_spi_pin_config(spi_num, 1, cfg);
    if (spi_pin_func_sel == -1) {
        return SYS_EINVAL;
    }

    for (i = 0; i < 4; i++) {
        ss_pin_func_sel = hal_spi_ss_pin_config(spi_num, 1, cfg->ss_pin[i]);
        if (ss_pin_func_sel != -1) {
            memset(&spi_ss_cfg, 0x0, sizeof(am_hal_gpio_pincfg_t));
            spi_ss_cfg.uFuncSel = ss_pin_func_sel;
            spi_ss_cfg.eDriveStrength = AM_HAL_GPIO_PIN_DRIVESTRENGTH_12MA;
            spi_ss_cfg.eGPOutcfg = AM_HAL_GPIO_PIN_OUTCFG_PUSHPULL;
            spi_ss_cfg.eGPInput = AM_HAL_GPIO_PIN_INPUT_NONE;
            spi_ss_cfg.eIntDir = AM_HAL_GPIO_PIN_INTDIR_LO2HI;
            spi_ss_cfg.uIOMnum = spi_num;
            spi_ss_cfg.uNCE = hal_spi_get_uNCE(spi_num, cfg->ss_pin[i]);
            spi_ss_cfg.eCEpol = AM_HAL_GPIO_PIN_CEPOL_ACTIVELOW;
            if (am_hal_gpio_pinconfig(cfg->ss_pin[i], spi_ss_cfg) != AM_HAL_STATUS_SUCCESS) {
                return SYS_EINVAL;
            }
            spi->ss_pin[i] = cfg->ss_pin[i];
            spi->cur_ss_pin = cfg->ss_pin[i];
        } else {
            spi->ss_pin[i] = -1;
        }
    }

    memset(&spi_sck_cfg, 0x0, sizeof(am_hal_gpio_pincfg_t));
    spi_sck_cfg.uFuncSel = spi_pin_func_sel;
    spi_sck_cfg.eDriveStrength = AM_HAL_GPIO_PIN_DRIVESTRENGTH_12MA;
    spi_sck_cfg.uIOMnum = spi_num;
    if (am_hal_gpio_pinconfig(cfg->sck_pin, spi_sck_cfg) != AM_HAL_STATUS_SUCCESS){
        return SYS_EINVAL;
    }

    memset(&spi_miso_cfg, 0x0, sizeof(am_hal_gpio_pincfg_t));
    spi_miso_cfg.uFuncSel = spi_pin_func_sel;
    spi_miso_cfg.uIOMnum = spi_num;
    if (am_hal_gpio_pinconfig(cfg->miso_pin, spi_miso_cfg) != AM_HAL_STATUS_SUCCESS) {
        return SYS_EINVAL;
    }

    memset(&spi_mosi_cfg, 0x0, sizeof(am_hal_gpio_pincfg_t));
    spi_mosi_cfg.uFuncSel = spi_pin_func_sel;
    spi_mosi_cfg.eDriveStrength = AM_HAL_GPIO_PIN_DRIVESTRENGTH_12MA;
    spi_mosi_cfg.uIOMnum = spi_num;
    if (am_hal_gpio_pinconfig(cfg->mosi_pin, spi_mosi_cfg) != AM_HAL_STATUS_SUCCESS) {
        return SYS_EINVAL;
    }

    /* Enable the IOM. */
    hal_spi_enable(spi_num);

    spi->spi_num = spi_num;
    spi->cont_tx = false;
    spi->spi_type = HAL_SPI_TYPE_MASTER;

    return 0;
}

static int
hal_spi_init_slave(int spi_num, struct apollo3_spi_cfg *cfg)
{
    return SYS_ERANGE;
}

int
hal_spi_config(int spi_num, struct hal_spi_settings *settings)
{
    const struct apollo3_spi *spi;
    int rc;

    spi = apollo3_spi_resolve(spi_num);
    if (spi == NULL) {
        return SYS_EINVAL;
    }

    if (spi->spi_type == HAL_SPI_TYPE_MASTER) {
        rc = hal_spi_config_master(spi_num, settings);
    } else {
        rc = hal_spi_config_slave(spi_num, settings);
    }

    return rc;
}

int
hal_spi_enable(int spi_num)
{
    struct apollo3_spi *spi;

    spi = apollo3_spi_resolve(spi_num);
    if (spi == NULL) {
        return SYS_EINVAL;
    }
    am_hal_iom_enable(spi->spi_handle);

    return 0;
}

int
hal_spi_disable(int spi_num)
{
    struct apollo3_spi *spi;

    spi = apollo3_spi_resolve(spi_num);
    if (spi == NULL) {
        return SYS_EINVAL;
    }
    am_hal_iom_disable(spi->spi_handle);

    return 0;
}

int
hal_spi_txrx_noblock(int spi_num, void *txbuf, void *rxbuf, int num_bytes)
{
    /* Not implemented */
    return SYS_ERANGE;
}
